Attempting a fix on Safari z-index issue

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -144,7 +144,7 @@ h6 {
 	letter-spacing: 1px;
 	text-transform: uppercase;
 	font-family: "Poppins", sans-serif;
-	/* -webkit-transform: ; */
+	-webkit-transform: translate3d(0, 0, 200px);
 	transform: translate3d(0, 0, 200px);
 }
 
